--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             </div>
             
             <div class="images">
-                <img src="images.jfif" alt="PUBG 1">
-                <img src="images (1).jfif" alt="PUBG 2">
-                <img src="images.png" alt="PUBG 3">
+                <img src="download.png" alt="PUBG 1">
+                <img src="download.jpeg" alt="PUBG 2">
+                <img src="download (1).jpeg" alt="PUBG 3">
             </div>
         </div>
         
